@@ -1,3 +1,8 @@
+2007-08-22  Jens Granseuer  <jensgr@gmx.net>
+
+	* appearance-desktop.c: (wp_select_after_realize): if no background
+	image set, select "no wallpaper"
+
 2007-08-14  Jens Granseuer  <jensgr@gmx.net>
 
 	* appearance-themes.c: (themes_init):
